Fix: contact email

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,7 +23,7 @@ import Layout from '../components/layouts/Layout.astro';
     <form
       class='flex flex-col items-center justify-center w-full gap-2'
       target='_blank'
-      action='https://formsubmit.co/9f2e38d7a97aa8e4fad043b4b83b9558'
+      action='https://formsubmit.co/hello@aleksa.io'
       method='POST'
     >
       <div class='flex flex-row items-center justify-between w-full gap-4'>
