Feat: Upgrade to Astro 3.0, new posts and fixes all around

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@ import DarkMode from './DarkMode.astro';
 import { navItems } from '../data/nav';
 ---
 
-<div class='navbar bg-base-100 pt-4 sticky top-0 z-50 opacity-[0.925]'>
+<div class='navbar bg-base-100 pt-4 pb-2 sticky top-0 z-50 opacity-[0.925] md:pt-6 md:pb-4'>
   <div class='flex-1'>
     <a class='flex items-center gap-4 p-2 font-bold hover:underline md:text-2xl' href='/'>
       <!-- for image before the site title, uncomment img below and remove pt-4 from the 1st parent div above
