--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -59,7 +59,7 @@ const {
     </script>
     <div class='flex-grow w-full max-w-3xl'>
       <Navbar />
-      <div class='px-4 pt-4 md:pt-8'>
+      <div class='px-4'>
         <div class='min-w-full prose lg:prose-lg animate-content-fade'>
           <slot />
         </div>
