--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,8 +31,8 @@ import Layout from '../components/layouts/Layout.astro';
   </p>
   <p
     style="font-family: 'SegoeScript', cursive;"
-    class='text-3xl sm:text-4xl text-right font-bold select-none px-4 xs:px-8'
+    class='text-3xl sm:text-4xl text-right font-bold select-none px-8 xs:px-16'
   >
-    Aleksa C.
+    aleksa
   </p>
 </Layout>
