Fix: navbar items width

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -18,7 +18,7 @@ import { navItems } from '../data/nav';
           <li>
             <a
               href={href}
-              class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-2 rounded-md leading-8 font-semibold'
+              class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current rounded-md leading-8 font-semibold w-20 flex items-center justify-center'
             >
               {label}
             </a>
