--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -123,7 +123,7 @@ import { projects } from '../data/project';
                 width={400}
                 height={300}
                 format={'webp'}
-                class='transition-all shadow-md duration-300 ease-in-out rounded-lg hover:scale-105 hover:shadow-lg cursor-pointer'
+                class='transition-all shadow-md duration-300 ease-out rounded-lg hover:scale-105 hover:shadow-lg cursor-pointer'
               />
             </label>
 
