--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,6 +20,7 @@ import Layout from '../components/layouts/Layout.astro';
         >
       </p>
     </div>
+    <!-- Use your e-mail or check "Invisible emails" section at: https://formsubmit.co/documentation PLEASE DON NOT USE MY STRING ID -->
     <form
       class='flex flex-col items-center justify-center w-full gap-2'
       target='_blank'
