--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -1,12 +1,12 @@
 ---
 import type { Post } from '../data/post';
-import { Image } from 'astro:assets'
+import { Image } from 'astro:assets';
 import Date from './utilities/Date.astro';
 import ReadTime from './utilities/ReadTime.astro';
 const post: Post = Astro.props.post;
 ---
 
-<div class='flex flex-col items-center sm:pb-8 sm:flex-row-reverse sm:gap-10'>
+<div class='flex flex-col items-center sm:flex-row-reverse sm:gap-10 sm:pb-8'>
   {
     post.img && (
       <a href={`/${post.slug}`} class='shrink-0'>
@@ -16,22 +16,16 @@ const post: Post = Astro.props.post;
           width={post.imgWidth}
           height={post.imgHeight}
           format={'webp'}
-          class='object-cover w-full rounded sm:w-64 sm:h-[10.5rem] bg-base-content/20 transition-all shadow-md duration-300 ease-out hover:scale-105 hover:shadow-lg cursor-pointer'
+          class='w-full cursor-pointer rounded bg-base-content/20 object-cover shadow-md transition-all duration-300 ease-out hover:scale-105 hover:shadow-lg sm:h-[10.5rem] sm:w-64'
         />
       </a>
     )
   }
   <div class='flex flex-col'>
     <h2 class='!my-0 text-center sm:text-left'>
-      <a
-        class='font-semibold no-underline hover:underline'
-        href={`/${post.slug}`}
-        >{post.title}
-      </a>
+      <a class='font-semibold no-underline hover:underline' href={`/${post.slug}`}>{post.title} </a>
     </h2>
-    <div
-      class='flex flex-row items-center justify-center gap-2 pt-2 text-sm sm:justify-start'
-    >
+    <div class='flex flex-row items-center justify-center gap-2 pt-2 text-sm sm:justify-start'>
       <span>
         <Date date={post.date} />
       </span>
