--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -20,7 +20,7 @@ const {
   ogImage,
   ogType = 'website',
   twitterHandle = '@aleksacodes',
-  slug = undefined
+  slug = undefined,
 } = Astro.props as Props;
 ---
 
