--- a/src/components/utilities/Date.astro
+++ b/src/components/utilities/Date.astro
@@ -4,7 +4,7 @@ const dateObject = new Date(date);
 const formattedDate = dateObject.toLocaleDateString('en-US', {
   year: 'numeric',
   month: 'long',
-  day: 'numeric'
+  day: 'numeric',
 });
 ---
 
