--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,7 +31,7 @@ import Layout from '../components/layouts/Layout.astro';
   </p>
   <p
     style="font-family: 'SegoeScript', cursive;"
-    class='text-3xl sm:text-4xl text-right font-bold select-none px-8 xs:px-16'
+    class='select-none px-8 text-right text-3xl font-bold xs:px-16 sm:text-4xl'
   >
     aleksa
   </p>
