--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -1,11 +1,11 @@
 <label
-  class='swap swap-rotate active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current p-3 rounded-md'
+  class='swap swap-rotate rounded-md p-3 hover:bg-base-content/20 hover:text-current active:bg-base-content/30 active:text-current'
   data-toggle-theme='winter'
   data-act-class='swap-active'
 >
   <svg
     xmlns='http://www.w3.org/2000/svg'
-    class='swap-off icon icon-tabler icon-tabler-sun'
+    class='icon icon-tabler icon-tabler-sun swap-off'
     width='24'
     height='24'
     viewBox='0 0 24 24'
@@ -17,13 +17,11 @@
   >
     <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
     <circle cx='12' cy='12' r='4'></circle>
-    <path
-      d='M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7'
-    ></path>
+    <path d='M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7'></path>
   </svg>
   <svg
     xmlns='http://www.w3.org/2000/svg'
-    class='swap-on icon icon-tabler icon-tabler-moon'
+    class='icon icon-tabler icon-tabler-moon swap-on'
     width='24'
     height='24'
     viewBox='0 0 24 24'
@@ -34,8 +32,6 @@
     stroke-linejoin='round'
   >
     <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
-    <path
-      d='M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z'
-    ></path>
+    <path d='M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z'></path>
   </svg>
 </label>
