--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,20 +2,20 @@
 import { days } from '../data/day';
 ---
 
-<footer class='w-full mt-16 sm:mt-4' aria-labelledby='footer-heading'>
+<footer class='mt-16 w-full sm:mt-4' aria-labelledby='footer-heading'>
   <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 200'>
     <path
-      class='scale-y-75 wave-t'
+      class='wave-t scale-y-75'
       fill='currentColor'
       fill-opacity='1'
       d='M0,192L34.3,181.3C68.6,171,137,149,206,160C274.3,171,343,213,411,213.3C480,213,549,171,617,165.3C685.7,160,754,192,823,218.7C891.4,245,960,267,1029,256C1097.1,245,1166,203,1234,186.7C1302.9,171,1371,181,1406,186.7L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z'
     ></path>
   </svg>
   <div class='wave-b'>
-    <div class='grid grid-cols-1 px-4 py-8 mx-auto max-w-8xl lg:px-0 lg:grid-cols-3'>
+    <div class='max-w-8xl mx-auto grid grid-cols-1 px-4 py-8 lg:grid-cols-3 lg:px-0'>
       <div class=''></div>
-      <div class='text-xs xs:text-sm text-center flex flex-col justify-center items-center gap-2'>
-        <div class='font-medium footer-text-t'>
+      <div class='flex flex-col items-center justify-center gap-2 text-center text-xs xs:text-sm'>
+        <div class='footer-text-t font-medium'>
           © <span id='current-year'></span> Code by{' '}
           <a
             href='https://github.com/aleksa-codes/astro-portfolio'
@@ -31,7 +31,7 @@ import { days } from '../data/day';
             class='hover:underline'>Storyset</a
           >
         </div>
-        <div id='footer-message' class='flex justify-center mx-auto text-center md:flex-row footer-text-b'></div>
+        <div id='footer-message' class='footer-text-b mx-auto flex justify-center text-center md:flex-row'></div>
         <a href='https://astro.build' target='_blank' rel='noopener noreferrer' class='mt-6'>
           <img src='https://astro.badg.es/v1/built-with-astro.svg' alt='Built with Astro' width='150' height='27.5' />
         </a>
