--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -19,22 +19,12 @@ const { page } = Astro.props;
   <div>
     {page.data.map((post: any) => <PostCard post={post} />)}
   </div>
-  <div class='flex flex-row justify-center font-semibold mt-4'>
+  <div class='mt-4 flex flex-row justify-center font-semibold'>
     Page {page.currentPage} / {page.lastPage}
   </div>
-  <div class='btn-group grid grid-cols-2 w-2/3 sm:w-1/2 mx-auto mt-4'>
-    <a
-      href={page.url.prev}
-      class={`btn btn-outline ${page.url.prev ? '' : 'btn-disabled'}`}
-    >
-      Previous
-    </a>
+  <div class='btn-group mx-auto mt-4 grid w-2/3 grid-cols-2 sm:w-1/2'>
+    <a href={page.url.prev} class={`btn btn-outline ${page.url.prev ? '' : 'btn-disabled'}`}> Previous </a>
 
-    <a
-      href={page.url.next}
-      class={`btn btn-outline ${page.url.next ? '' : 'btn-disabled'}`}
-    >
-      Next
-    </a>
+    <a href={page.url.next} class={`btn btn-outline ${page.url.next ? '' : 'btn-disabled'}`}> Next </a>
   </div>
 </Layout>
