--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,13 @@ import Layout from '../components/layouts/Layout.astro';
 ---
 
 <Layout>
-  <div class='flex flex-row items-center justify-start mb-4 md:mb-8'>
-    <span id='typed' class='text-4xl font-extrabold lg:text-5xl text-base-content'>Hello World</span>
+  <div class='mb-4 flex flex-row items-center justify-start md:mb-8'>
+    <span id='typed' class='text-4xl font-extrabold text-base-content lg:text-5xl'>Hello World</span>
     <span class='not-prose ml-3 animate-waving-hand'>
       <img
         src='/assets/waving-hand.webp'
         alt='waving hand'
-        class='w-12 h-12'
+        class='h-12 w-12'
         srcset='
           /assets/waving-hand.webp 1x,
           /assets/waving-hand.webp 2x
@@ -19,7 +19,7 @@ import Layout from '../components/layouts/Layout.astro';
   </div>
   <h1 class='mb-[-48px] lg:mb-[-48px]'>
     My name is <span
-      class='font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-base-content to-indigo-500 dark:from-base-content dark:to-indigo-300'
+      class='bg-gradient-to-r from-base-content to-indigo-500 bg-clip-text font-extrabold text-transparent dark:from-base-content dark:to-indigo-300'
       >Aleksa</span
     >
   </h1>
@@ -28,7 +28,7 @@ import Layout from '../components/layouts/Layout.astro';
     <span class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'>things for the web.</span>
   </h2>
   <div class='text-xl font-semibold'>Computer Science Student and Web Developer.</div>
-  <div class='w-[275px] h-[275px] sm:w-[350px] sm:h-[350px] md:w-[450px] md:h-[450px] mx-auto mt-4 bg-laptop'>
+  <div class='mx-auto mt-4 h-[275px] w-[275px] bg-laptop sm:h-[350px] sm:w-[350px] md:h-[450px] md:w-[450px]'>
     <!-- Laptop image here -->
   </div>
 </Layout>
